Revert "Remove unsafe cast in Game"
This reverts commit cfd8f200