@@ -7,7 +7,6 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -68,13 +67,18 @@ public class Game {
         int numPlayers = getPlayers().size();
         int numGems;
         switch (numPlayers) {
-            case 2 -> numGems = 4;
-            case 3 -> numGems = 5;
-            case 4 -> numGems = 7;
-            default -> {
+            case 2:
+                numGems = 4;
+                break;
+            case 3:
+                numGems = 5;
+                break;
+            case 4:
+                numGems = 7;
+                break;
+            default:
                 // handle invalid number of players
                 return;
-            }
         }
         gemStack = Arrays.asList(
                 new GemAmount(Crystal.Diamond, numGems),
@@ -138,7 +142,7 @@ public class Game {
     }
 
     public void generateDevelopmentCards() throws IOException {
-        developmentCards = readCardsFromFile("splendorCards.csv", "development").stream().map(card -> (DevelopmentCard) card).toList();
+        developmentCards = (List<DevelopmentCard>) readCardsFromFile("splendorCards.csv", "development");
     }
 
     public void generateNobleCards() throws IOException {
@@ -149,7 +153,7 @@ public class Game {
             case 4 -> 5;
             default -> 0; // handle invalid player counts
         };
-        nobleCards = readCardsFromFile("nobleCards.csv", "noble").stream().limit(limit).map(card -> (NobleCard) card).toList();
+        nobleCards = (List<NobleCard>) readCardsFromFile("nobleCards.csv", "noble").stream().limit(limit).collect(Collectors.toList());
     }
 
     public void fillTableCardsDeck() {
@@ -161,7 +165,7 @@ public class Game {
             List<DevelopmentCard> cards = developmentCards.stream()
                     .filter(x -> x.getLevel() == finalLevel)
                     .limit(4)
-                    .toList();
+                    .collect(Collectors.toList());
             // remove the selected cards from the developmentCards list
             developmentCards.removeAll(cards);
             // add the selected cards to the cardsOnTable list
@@ -170,7 +174,7 @@ public class Game {
     }
     
     public void placeCardsOnBoard() {
-    	
+
     	for(int level = 0; level < 3; level++) {
     		int lvl = level + 1;
     		List<DevelopmentCard> cards = cardsOnTable.stream()
@@ -183,28 +187,22 @@ public class Game {
     		}
     	}
     }
-    
+
     public DevelopmentCard[][] getCardsOnBoard(){
     	return matrix;
     }
-    
-    
+
+
     public void sortPlayers() {
-    	players.sort(Comparator.comparingInt(Player::getDateOfBirth).reversed());
+    	Collections.sort(players, (p1, p2) -> p1.getDateOfBirth()-p2.getDateOfBirth());
     }
-    
-    public void determineFirstPlayer() {
-    	numberOfPlayers = players.size();
-    	firstPlayer = players.get(0);
-    	currentPlayer = players.get(0);
-    }
-    
+
     public Player getFirstPlayer() {
     	return firstPlayer;
     }
-    
+
     public Player getCurrentPlayer() {
     	return currentPlayer;
     }
-    
+
 }
